--- a/nginx.conf
+++ b/nginx.conf
@@ -1,51 +1,63 @@
-user  nginx;
-worker_processes  1;
+user nginx;
+worker_processes 1;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+  worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+  '$status $body_bytes_sent "$http_referer" '
+  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
-    sendfile        on;
-    keepalive_timeout  65;
+  access_log /var/log/nginx/access.log main;
+  sendfile on;
+  keepalive_timeout 65;
 
-    server {
-      listen 80;
+  server {
+    listen 80;
+    server_name _;
 
-      server_name _;
-      return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
+  }
+
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    server_name sso.ducluong.monster;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
+
+    location / {
+      proxy_pass http://keycloak/:8080;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    server {
-       listen 443 ssl;
-       listen [::]:443 ssl;
+  }
 
-       server_name ducluong.monster *.ducluong.monster;
-       ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
-       ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
-       root /usr/share/nginx/html/;
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-      proxy_set_header X-Forwarded-For $proxy_protocol_addr;
-      proxy_set_header X-Forwarded_for $scheme;
+    server_name ducluong.monster *.ducluong.monster;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
+
+    location / {
+      proxy_pass https://luongnguyentrong.github.io/lvtn_client;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
 
-       location / {
-         gzip off;
-         root /usr/share/nginx/html/;
-         index  index.html;
-       }
-
-   }
-
+  }
 }
