--- a/production.yml
+++ b/production.yml
@@ -1,27 +1,34 @@
+version: '1.0'
+
 services:
   keycloak:
-      image: jboss/keycloak:15.1.1
-      environment:
-        KEYCLOAK_USER: admin
-        KEYCLOAK_PASSWORD: P&g?@^,wDTNX4]zM
-      ports:
-        - 8080:8080
+    image: bitnami/keycloak:20.0.5-debian-11-r8
+    environment:
+      - KEYCLOAK_ADMIN_USER=admin
+      - KEYCLOAK_ADMIN_PASSWORD=P&g?@^,wDTNX4]zM
+      - KEYCLOAK_DATABASE_HOST=postgresql
+      - KEYCLOAK_DATABASE_NAME=keycloak
+      - KEYCLOAK_DATABASE_USER=keycloak
+      - KEYCLOAK_DATABASE_PASSWORD=Wjd4nw37wJu9bAsvBv3Mn8byew7URykL
+    depends_on:
+      - postgresql
 
-  nginx:
-      image: ducluongvn/console:lastest
-      volumes:
-        - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
-        - ${PWD}/certs:/etc/letsencrypt
-      ports:
-        - 443:443
-        - 80:80
+  # nginx:
+  #   image: nginx:mainline-alpine-slim
+  #   volumes:
+  #   #   - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
+  #   #   - ${PWD}/certs:/etc/letsencrypt
+  #   ports:
+  #     - 443:443
+  #     - 80:80
 
-  postgres:
+  postgresql:
     image: postgres:15.2-alpine3.17
     restart: always
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - 5432:5432
+      - POSTGRES_PASSWORD=R#iB69xJL8V3q%VTwSdRj4vBNdi#XlSv
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+
+    volumes:
+      - ${PWD}/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
