add POST /units

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT=5000
 KEYCLOAK_HOST=https://sso.ducluong.monster
 CLIENT_ID=api_server
 CLIENT_SECRET=CMD9LKC5CTU2MlzKUHe9CL5EqUtRLSkK
+KEYCLOAK_USERNAME=admin
+KEYCLOAK_PASSWORD=P&g?@^,wDTNX4]zM
