--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 PORT=5000
 KEYCLOAK_HOST=https://sso.ducluong.monster
 CLIENT_ID=api_server
-CLIENT_SECRET=CMD9LKC5CTU2MlzKUHe9CL5EqUtRLSkK
+CLIENT_SECRET=WP0FjTw7Ol8JaVhWsY8k4UuXRtc00tiK
 KEYCLOAK_USERNAME=admin
 KEYCLOAK_PASSWORD=P&g?@^,wDTNX4]zM
+ENVIROMENT=development
+POSTGRES_DSN=postgres://api_server:634ZgwXWSjVt5179XimSMkhmg2Uxnq5Q@postgresql:5432
