--- a/nginx.conf
+++ b/nginx.conf
@@ -32,11 +32,14 @@ http {
     listen [::]:443 ssl;
 
     server_name sso.ducluong.monster;
-    ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
+    proxy_buffer_size   128k;
+	proxy_buffers   4 256k;
+	proxy_busy_buffers_size   256k;
 
     location / {
-      proxy_pass http://keycloak/:8080;
+      proxy_pass http://keycloak:8080;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,15 +52,50 @@ http {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name ducluong.monster *.ducluong.monster;
+    server_name ducluong.monster;
     ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
 
-    location / {
-      proxy_pass https://luongnguyentrong.github.io/lvtn_client;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
+    root /usr/share/nginx/html;
+    index index.html;
+	location / {
+	try_files $uri $uri/ /index.html;
+	}
+  }
 
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    server_name api.ducluong.monster;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
+
+    location / {
+      proxy_pass http://api:5000/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+    }
+  }
+
+
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    server_name *.ducluong.monster;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
+
+
+    root /usr/share/nginx/html;
+    index index.html;
+	location / {
+	try_files $uri $uri/ /index.html;
+	}
   }
 }
