--- a/production.yml
+++ b/production.yml
@@ -13,14 +13,18 @@ services:
     depends_on:
       - postgresql
 
-  # nginx:
-  #   image: nginx:mainline-alpine-slim
-  #   volumes:
-  #   #   - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
-  #   #   - ${PWD}/certs:/etc/letsencrypt
-  #   ports:
-  #     - 443:443
-  #     - 80:80
+  nginx:
+    image: nginx:mainline-alpine-slim
+    volumes:
+      - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
+      - ${PWD}/certs:/etc/letsencrypt
+      - /home/github_bot/console:/usr/share/nginx/html
+    ports:
+      - 443:443
+      - 80:80
+
+  api: 
+    image: ducluongvn/api
 
   postgresql:
     image: postgres:15.2-alpine3.17
@@ -32,3 +36,5 @@ services:
 
     volumes:
       - ${PWD}/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
+    ports:
+      - 5432:5432
