--- a/nginx.conf
+++ b/nginx.conf
@@ -34,9 +34,9 @@ http {
     server_name sso.ducluong.monster;
     ssl_certificate /etc/letsencrypt/live/ducluong.monster-0001/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
-    proxy_buffer_size   128k;
-	proxy_buffers   4 256k;
-	proxy_busy_buffers_size   256k;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
 
     location / {
       proxy_pass http://keycloak:8080;
@@ -56,11 +56,14 @@ http {
     ssl_certificate /etc/letsencrypt/live/ducluong.monster/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/ducluong.monster/privkey.pem;
 
-    root /usr/share/nginx/html;
-    index index.html;
-	location / {
-	try_files $uri $uri/ /index.html;
-	}
+    location / {
+      proxy_pass http://client:80/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 
   server {
@@ -92,10 +95,13 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
 
 
-    root /usr/share/nginx/html;
-    index index.html;
-	location / {
-	try_files $uri $uri/ /index.html;
-	}
+    location / {
+      proxy_pass http://client:80/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 }
