--- a/production.yml
+++ b/production.yml
@@ -12,19 +12,26 @@ services:
       - KEYCLOAK_DATABASE_PASSWORD=Wjd4nw37wJu9bAsvBv3Mn8byew7URykL
     depends_on:
       - postgresql
+      - nginx
 
   nginx:
     image: nginx:mainline-alpine-slim
     volumes:
       - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
       - ${PWD}/certs:/etc/letsencrypt
-      - /home/github_bot/console:/usr/share/nginx/html
     ports:
       - 443:443
       - 80:80
 
   api: 
     image: ducluongvn/api
+    depends_on:
+      - postgresql
+
+  client:
+    image: ghcr.io/luongnguyentrong/lvtn_client:master
+    depends_on:
+      - keycloak
 
   postgresql:
     image: postgres:15.2-alpine3.17
