--- a/production.yml
+++ b/production.yml
@@ -18,7 +18,7 @@ services:
     image: nginx:mainline-alpine-slim
     volumes:
       - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
-      - ${PWD}/certs:/etc/letsencrypt
+      - ${PWD}/certs/certs:/etc/letsencrypt
     ports:
       - 443:443
       - 80:80
