--- a/production.yml
+++ b/production.yml
@@ -22,6 +22,11 @@ services:
     ports:
       - 443:443
       - 80:80
+    depends_on:
+      - keycloak
+      - client
+      - api
+      - postgresql
 
   api: 
     image: ducluongvn/api
