--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,9 @@
 version: '2'
 services:
-  postgresql:
-    image: docker.io/bitnami/postgresql:11
-    environment:
-      # ALLOW_EMPTY_PASSWORD is recommended only for development.
-      - ALLOW_EMPTY_PASSWORD=yes
-      - POSTGRESQL_USERNAME=bn_keycloak
-      - POSTGRESQL_DATABASE=bitnami_keycloak
+  superset:
+    image: ducluongvn/superset_local
     volumes:
-      - 'postgresql_data:/bitnami/postgresql'
-
-  keycloak:
-    image: docker.io/bitnami/keycloak:20
-    depends_on:
-      - postgresql
+      - ./config/superset:/app/pythonpath 
+    
     ports:
-      - "80:8080"
-
-volumes:
-  postgresql_data:
-    driver: local
+      - 8080:8088
