--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,9 +15,14 @@ COPY --from=build /api/server .
 ENV PORT=5000
 ENV KEYCLOAK_HOST=https://sso.ducluong.monster
 ENV CLIENT_ID=api_server
-ENV CLIENT_SECRET=WP0FjTw7Ol8JaVhWsY8k4UuXRtc00tiK
+ENV CLIENT_SECRET=Panaxm4uaNAn0jA57yxXDjj5ga2o2xG0
 ENV KEYCLOAK_USERNAME=admin
 ENV KEYCLOAK_PASSWORD=P&g?@^,wDTNX4]zM
+ENV ENVIROMENT=development
+ENV POSTGRES_DSN=postgres://api_server:634ZgwXWSjVt5179XimSMkhmg2Uxnq5Q@159.223.66.111:5432
+ENV AWS_REGION=ap-southeast-1
+ENV AWS_ACCESS_KEY_ID=AKIAVQKWVG6WAUWPSHWR
+ENV AWS_SECRET_ACESS_KEY=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
 
 EXPOSE 5000
 ENTRYPOINT [ "./server" ]
