--- a/deployments/nginx/nginx.conf
+++ b/deployments/nginx/nginx.conf
@@ -78,6 +78,7 @@ http {
       proxy_pass http://api:5000/;
       proxy_http_version 1.1;
       proxy_set_header Host $http_host;
+      proxy_set_header Origin $http_origin; # Add this line
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
