--- a/deployments/production.yml
+++ b/deployments/production.yml
@@ -1,4 +1,4 @@
-version: '1.0'
+version: "1.0"
 
 services:
   keycloak:
@@ -13,10 +13,12 @@ services:
     depends_on:
       - postgresql
 
+    restart: on-failure
+
   nginx:
     image: nginx:mainline-alpine-slim
     volumes:
-      - ${PWD}/nginx.conf:/etc/nginx/nginx.conf
+      - ${PWD}/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ${PWD}/certs/certs:/etc/letsencrypt
     ports:
       - 443:443
@@ -27,10 +29,11 @@ services:
       - api
       - postgresql
 
-  api: 
+  api:
     image: ducluongvn/api
     depends_on:
       - postgresql
+    restart: on-failure
 
   client:
     image: ghcr.io/luongnguyentrong/lvtn_client:master
@@ -39,14 +42,14 @@ services:
 
   postgresql:
     image: postgres:15.2-alpine3.17
-    restart: always
+    restart: on-failure
     environment:
       - POSTGRES_PASSWORD=R#iB69xJL8V3q%VTwSdRj4vBNdi#XlSv
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
 
     volumes:
-      - ${PWD}/postgres_init.sql:/docker-entrypoint-initdb.d/postgres_init.sql
+      - ${PWD}/postgresql/:/docker-entrypoint-initdb.d/
       - db-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
