--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,6 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: whoami
+          script: |
+            cd lvtn_backend
+            make deploy_api
