--- a/deployments/nginx/nginx.conf
+++ b/deployments/nginx/nginx.conf
@@ -86,6 +86,25 @@ http {
     }
   }
 
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    server_name superset.ducluong.monster;
+    ssl_certificate /etc/letsencrypt/live/ducluong.monster-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ducluong.monster-0001/privkey.pem;
+
+    location / {
+      proxy_pass http://superset:8088/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $http_host;
+      proxy_set_header Origin $http_origin; # Add this line
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+    }
+  }
 
   server {
     listen 443 ssl;
