--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,21 @@
 PORT=5000
+
+# Keycloak
 KEYCLOAK_HOST=https://sso.ducluong.monster
 CLIENT_ID=api_server
 CLIENT_SECRET=Panaxm4uaNAn0jA57yxXDjj5ga2o2xG0
 KEYCLOAK_USERNAME=admin
 KEYCLOAK_PASSWORD=P&g?@^,wDTNX4]zM
+
 ENVIROMENT=development
-POSTGRES_DSN=postgres://api_server:634ZgwXWSjVt5179XimSMkhmg2Uxnq5Q@159.223.66.111:5432
+POSTGRES_DSN=postgres://api_server:634zgwxwsjvt5179ximsmkhmg2uxnq5q@159.223.66.111:5432
+
+# AWS
 AWS_REGION=ap-southeast-1
 AWS_ACCESS_KEY_ID=AKIAVQKWVG6WAUWPSHWR
 AWS_SECRET_ACESS_KEY=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
+
+# Superset
+SUPERSET_HOST=http://localhost:8080/
+SUPERSET_ADMIN_PASSWORD=UamqhxiNA/HfwT1mR33bk1nZ92+XFEnmLvckpfp3DbuKaoyPXYVREJgC
+SUPERSET_ADMIN_USER=admin
